# tarotreader

./: .env.example  .gitignore  Makefile  README.md  app.vue  compose.production.yaml  docker-compose.yml  nuxt.config.ts  package.json
assets/css/: tarot.css
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/src/: main.rs
components/: diaryEntry.vue
data/: diary.json
frontend/: .dockerignore  Dockerfile  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.node.json
pages/: index.vue  login.vue
pages/[username]/: index.vue
pages/[username]/index/: [id].vue
server/api/auth/: [...].ts
stores/: diaryStore.ts
