[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenv = "0.15"

# Async runtime
tokio = { version = "1", features = ["full"] }

# UUID support
uuid = { version = "1.5", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
